# robotter

./: Makefile  awesome.cc  findbox.cc  findroed.cc  reader.cc
Exam/: .#main.cc  CMakeLists.txt  camera.cc  camera.h  camera_calibrator.cc  defines.h  exercise5.cc  main.cc  main.h  odemetri.cc  particles.cc  particles.h  resampling.cc  resampling.h  robot.cc  robot.h  ui.cc  ui.h
Exam/cams/: CMakeCache.txt  CMakeLists.txt
Exercise5/: CMakeLists.txt  Makefile  exercise5.cc  exercise5.old  lolbandit.cpp  particles.cc  robot.cc
Exercise5/odometri/: .#odometri.cc  Makefile  odometri.cc
afstandsbob/: Makefile  afstand  afstand.cc  movement.cc  movement.h  nyafstand.cc
erspplayerdriver/: Makefile
erspplayerdriver/__MACOSX/opencv2/Eksempel1/: ._eksempel1.cc
erspplayerdriver/__MACOSX/opencv2/Eksempel2/: ._eksempel2.cc
erspplayerdriver/driver/ersp/: ersp.cc  ersp.cfg  ersp.h
erspplayerdriver/opencv/Eksempel1/: Makefile  eksempel1.cc  farve  farve.cc  farve.cpp  farve2  farve2.cc
erspplayerdriver/opencv/Eksempel2/: eksempel2  eksempel2.cc
erspplayerdriver/opencv2/Eksempel1/: Makefile  eksempel1.cc
erspplayerdriver/opencv2/Eksempel2/: Makefile  eksempel2.cc
erspplayerdriver/test/: args-debugexperiments.h  bump-stop.cc
erspplayerdriver/test/avoidance/: main.cc
erspplayerdriver/test/awesome/: awesome.cc
erspplayerdriver/test/battery/: README  main.cc
erspplayerdriver/test/bumper/: main.cc
erspplayerdriver/test/dikuwallfollow/: main.cc
erspplayerdriver/test/sensorreadings/: README  main.cc
erspplayerdriver/test/square/: main.cc
ex5/: .#exercise5.cc  exercise5.cc  particles.cc
findholger/: Makefile  findroed  findroed.cc  findroed2.cc  movement.cc  movement.cpp  movement.h  movement.hpp
forfra/: CMakeLists.txt  Makefile  exercise5.oldi
forfra/odometri/: odometri
stop-front/: main.cc
testapi/: robot.cc  robot.h  test.cc
